<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_bottom_sheet_new_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/bottom_sheet_new_task_header"
                android:theme="@style/TextViewHeadingForBottomSheet"
                app:layout_constraintEnd_toEndOf="@id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <EditText
                android:id="@+id/et_bottom_sheet_task"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/bottom_sheet_task_title_hint"
                android:inputType="text"
                android:theme="@style/EditTextForAddingNewTask"
                app:layout_constraintEnd_toEndOf="@id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/tv_bottom_sheet_new_task" />

            <Spinner
                android:id="@+id/spn_bottom_sheet_task_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:theme="@style/SpinnerForAddingNewTask"
                app:layout_constraintEnd_toEndOf="@id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/et_bottom_sheet_task" />

            <TextView
                android:id="@+id/tv_bottom_sheet_metric"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/bottom_sheet_add_tasks_metric_title"
                android:theme="@style/TextViewHeadingForBottomSheet"
                app:layout_constraintEnd_toEndOf="@id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/spn_bottom_sheet_task_type" />

            <Spinner
                android:id="@+id/spn_bottom_sheet_task_metric"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:theme="@style/SpinnerForAddingNewTask"
                app:layout_constraintEnd_toEndOf="@id/guideline6"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/tv_bottom_sheet_metric" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_bottom_sheet_add_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:contentDescription="@string/bottom_sheet_confirm_to_add_content_desc"
                android:focusable="true"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toBottomOf="@+id/spn_bottom_sheet_task_metric"
                app:srcCompat="@drawable/ic_confirm" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>